--- a/backend/package.json
+++ b/backend/package.json
@@ -30,13 +30,15 @@
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.1.7",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/multer": "^2.0.0",
     "api-query-params": "^6.0.1",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
